--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -67,5 +67,13 @@
       font-weight: lighter;
       font-size: 16px;
     }
+
+    @media screen and (max-width: 800px) {
+      padding: 0 10px;
   }
+  }
+
+  @media screen and (max-width: 800px) {
+    height: 200px;
+}
 }
