--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -6,6 +6,10 @@
     align-items: center;
     position: relative;
 
+    @media screen and (max-width: 800px) {
+        margin-bottom: 25px;
+    }
+
     img {
         width: 100%;
         height: 95%;
@@ -19,6 +23,13 @@
         position: absolute;
         top: 255px;
         display: none;
+
+        @media screen and (max-width: 800px) {
+            display: block;
+            opacity: 0.9;
+            min-width: unset;
+            padding: 0 10px;
+        }
     }
 
     &:hover {
@@ -30,22 +41,36 @@
             opacity: 0.85;
             display: flex;
         }
-    }
 
-    .footer {
-        width: 100%;
-        height: 5%;
-        display: flex;
-        justify-content: space-between;
-        font-size: 18px;
+        @media screen and (max-width: 800px) {
+            width: 40vw;
 
-        .name {
-            width: 90%;
-            margin-bottom: 15px;
+            &:hover {
+                img {
+                    opacity: unset;
+                }
+
+                button {
+                    opacity: unset;
+                }
+            }
         }
 
-        .price {
-            width: 10%;
+        .footer {
+            width: 100%;
+            height: 5%;
+            display: flex;
+            justify-content: space-between;
+            font-size: 18px;
+
+            .name {
+                width: 90%;
+                margin-bottom: 15px;
+            }
+
+            .price {
+                width: 10%;
+            }
         }
     }
 }
